# src/domain/sale-entry/entity.ts
@@ -1,17 +1,19 @@
-import { UniqueEntityID } from "@/common/helpers/uuid";
-import { ICreateSaleEntryInput } from "./interfaces/dtos";
+import { UniqueEntityID } from '@/common/helpers/uuid';
+import { Product } from '../product/entity';
+import { ISaleEntryInput } from './interfaces/dtos/sale-entry.input';
 
 export class SaleEntry {
   public readonly id: string;
   public readonly date: Date;
   public readonly storeId: string;
+  public readonly product?: Product | null;
   public readonly productId: string;
-  public readonly createdBy: string;
-  public quantitySold: number;
-  public quantityReturned: number;
-  public unitCost: number;
-  public quantitySentToStore: number;
-  public salePrice: number;
+  public readonly createdBy?: string;
+  public quantitySold?: number;
+  public quantityReturned?: number;
+  public unitCost?: number;
+  public quantitySentToStore?: number;
+  public salePrice?: number;
 
   constructor({
     id,
@@ -24,9 +26,11 @@ export class SaleEntry {
     unitCost,
     quantitySentToStore,
     salePrice,
-  }: ICreateSaleEntryInput) {
+    product,
+  }: ISaleEntryInput) {
     this.id = id ?? UniqueEntityID.create();
     this.date = date;
+    this.product = product ?? null;
     this.storeId = storeId;
     this.productId = productId;
     this.createdBy = createdBy;
