# src/domain/sale-entry/interfaces/dtos/filter.input.ts
@@ -1,0 +1,8 @@
+export interface IFilterSaleEntryInput {
+  userId?: string;
+  quantitySold?: number;
+  quantityUnsold?: number;
+  quantitySentToStore?: number;
+  unitCost?: number;
+  unitPrice?: number;
+}
